spritesdir = $(pkgdatadir)/sprites
dist_sprites_DATA = sprites/background.png \
                    sprites/lose.png \
		    sprites/numbers.png \
		    sprites/quitmenu.png \
                    sprites/squares.png \
		    sprites/main.png \
		    sprites/pause.png \
		    sprites/ready.png \
		    sprites/underscore.png \
		    sprites/fonts.png \
		    sprites/name.png \
		    sprites/pointer.png \
		    sprites/scores.png

soundsdir = $(pkgdatadir)/sounds
dist_sounds_DATA = sounds/blank.ogg \
                    sounds/fall.ogg \
                    sounds/level.ogg \
                    sounds/line.ogg \
                    sounds/menu.ogg
