dist_pkgdata_DATA = level1.map level2.map

spritesdir = $(pkgdatadir)/sprites
dist_sprites_DATA = sprites/back.jpg \
                    sprites/lose.png \
                    sprites/rms.png \
                    sprites/bullets.png \
                    sprites/bill.png \
                    sprites/terrain.png \
                    sprites/numbers.png \
                    sprites/quitmenu.png \
                    sprites/underscore.png \
                    sprites/block.png \
                    sprites/main.png \
                    sprites/pause.png \
                    sprites/ready.png \
                    sprites/win.png \
                    sprites/fonts.png \
                    sprites/name.png \
                    sprites/pointer.png \
                    sprites/scores.png \
                    sprites/life.png

soundsdir = $(pkgdatadir)/sounds
dist_sounds_DATA = sounds/menu.ogg sounds/level.ogg
